[package]
name = "restpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
chrono = { version="0.4.38", features=["serde"] }
hex_color = { version="3.0.0", features=["serde"] }
reqwest = { version = "0.12.7", features=["json", "cookies", "gzip", "deflate", "socks"] }
serde = { version = "1.0.210", features=["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }
webbrowser = "1.0.2"
